--- a/index.html
+++ b/index.html
@@ -27,41 +27,163 @@
       </p>
       <p>
         <span>
-          Voici quelques exemples de mes réalisations photographiques et graphiques.
+          Voici quelques exemples de mes réalisations photographiques, graphiques et vidéo.
         </span>
       </p>
 	</div>
 
-	<div class="container">
-		<h2>WEI PGE 2022 - KEDGE BS</h2>
+<div class="container">
+		<h2>FOOD & BEVERAGE - SOFITEL MARSEILLE VIEUX PORT</h2>
+		<h3> Lors des changements de cartes j'ai organisé différents shootings photo en accord avec les cuisines afin de communiquer sur les sorties de nouveaux plats mais également pour mettre à jour notre site internet et les différentes plateformes de réservation de table.
+		</h3>
 	</div>
 
 	<div class="cards">
 		<div class="card">
-			<img src="images/vlad1.JPG" alt="Vladimir Cauchemar">
+			<img src="images/CARRE1.jpg" alt="Entrée Le Carré">
 		</div>
 		<div class="card">
-			<img src="images/vlad2.jpg" alt="Vladimir Cauchemar">
+			<img src="images/CARRE2.jpg" alt="Le Carré">
 		</div>
 		<div class="card">
-			<img src="images/zola.jpg" alt="Zola">
+			<img src="images/CARRE3.jpg" alt="Le Carré">
 		</div>
+		<div class="card">
+			<img src="images/CARRE4.jpg" alt="Entrée Le Carré">
+		</div>
+		<div class="card">
+			<img src="images/CARRE5.jpg" alt="Le Carré">
+		</div>
+		<div class="card">
+			<img src="images/CARRE6.jpg" alt="Le Carré">
+		</div>
+	</div>
+</div>
+
+
+<div class="container">
+		<h2>COLLABORATEURS - SOFITEL MARSEILLE VIEUX PORT</h2>
+		<h3>Voici quelques photos des collaborateurs prises dans l'objectif de créer du contenu pour les réseaux sociaux. Principalement à destination de LinkedIn ces photos servaient pour des posts présentant les coulisses des métiers de l'hôtellerie.</h3> 
 	</div>
 
 	<div class="cards">
 		<div class="card">
-			<img src="images/wei2.jpg" alt="WEI">
+			<img src="images/TECHNIQUE.jpg" alt="CHRISTOPHE ET NICOLAS">
 		</div>
 		<div class="card">
-			<img src="images/wei1.jpg" alt="WEI">
+			<img src="images/VALENTIN.jpg" alt="VALENTIN">
 		</div>
-			<div class="card">
-			<img src="images/wei3.jpg" alt="WEI">
+		<div class="card">
+			<img src="images/CONCIERGES.jpg" alt="CONCIERGES">
 		</div>
 	</div>
 
 <div class="container">
+		<h2>LA NUIT BY SOFITEL - SOFITEL MARSEILLE VIEUX PORT</h2>
+		<h3> A l'occasion de La Nuit By Sofitel, marqueur de Sofitel, j'ai pris des clichés à destination de nos réseaux sociaux.
+			J'ai pris part à l'organisation de cette soirée en collaboration avec le collectif marseillais "Borderline", notamment sur la partie réseaux sociaux, création de visuels et de fournitures ainsi que sur la gestion globale de l'évènement. Cette soirée a réuni 650 convives sur le 7ème étage du Sofitel Marseille Vieux Port, autour de trois artistes : DJ Baker, Mozambo et Bettina. 
+		</h3>
+	</div>
+
+	<div class="cards">
+		<div class="card">
+			<img src="images/LANUITBYSOFITEL1.jpg" alt="DJ BAKER">
+		</div>
+		<div class="card">
+			<img src="images/LANUITBYSOFITEL2.jpg" alt="Barman">
+		</div>
+		<div class="card">
+			<img src="images/LANUITBYSOFITEL3.jpg" alt="DJ BAKER & MOZAMBO">
+		</div>
+		<div class="card">
+			<img src="images/LANUITBYSOFITEL5.jpg" alt="MOZAMBO">
+		</div>
+		<div class="card">
+			<img src="images/LANUITBYSOFITEL4.jpg" alt="MOZAMBO">
+		</div>
+		<div class="card">
+			<img src="images/LANUITBYSOFITEL6.jpg" alt="BETTINA">
+		</div>
+	</div>
+
+	<div class="container">
+		<h2>CLOSING LA NUIT BY SOFITEL - SOFITEL MARSEILLE VIEUX PORT</h2>
+		<h3> Cette seconde soirée est venue clôturer la saison. A cette occasion j'ai pu organiser et gérer la totalité de l'évènement : gestion de l'organisation globale, communication de l'évènement, billetterie, plan d'implantation de la soirée. Cette soirée a réuni 500 convives autour d'un DJ set des pionniers de la French Touch Braxe + Falcon.
+		</h3>
+	</div>
+
+	<div class="cards">
+		<div class="card">
+			<img src="images/LANUITBYSOFITELCLOSING1.jpg" alt="BRAXE + FALCON">
+		</div>
+		<div class="card">
+			<img src="images/LANUITBYSOFITELCLOSING2.jpg" alt="closing la nuit by sofitel">
+		</div>
+		<div class="card">
+			<img src="images/LANUITBYSOFITELCLOSING3.jpg" alt="guests">
+		</div>
+	</div>
+
+
+<div class="container">
+		<h2>KOUSSKOUSS FESTIVAL - SOFITEL MARSEILLE VIEUX PORT</h2>
+		<h3> Voici quelques photos prises à l'occasion de la participation du Sofitel Novotel Marseille Vieux Port au festival marseillais, le Kousskouss Festival.
+		</h3>
+	</div>
+
+	<div class="cards">
+		<div class="card">
+			<img src="images/KF231.jpg" alt="Chef Auger & Hafida">
+		</div>
+		<div class="card">
+			<img src="images/KF233.jpg" alt="Kousskouss">
+		</div>
+		<div class="card">
+			<img src="images/KF232.jpg" alt="Chef Auger & Hafida">
+		</div>
+	</div>
+
+<div class="container">
+		<h2>SAIL GP - NOVOTEL MARSEILLE VIEUX PORT</h2>
+		<h3> A l'occasion de la venue de l'équipe de France du Sail GP au Novotel Marseille Vieux Port, et dans le cadre de leur engagement écologique pris en compte dans la compétition, un beach cleaning a été réalisé sur la plage des Catalans suivit d'un dîner antigaspi.
+		</h3>
+	</div>
+
+	<div class="cards">
+		<div class="card">
+			<img src="images/SAILGP20232.jpg" alt="SAIL GP FRA">
+		</div>
+		<div class="card">
+			<img src="images/SAILGP20233.jpg" alt="SAIL GP FRA">
+		</div>
+		<div class="card">
+			<img src="images/SAILGP20234.jpg" alt="SAIL GP FRA">
+		</div>
+	</div>
+
+	<div class="container">
+		<h2>VISUELS - SOFITEL MARSEILLE VIEUX PORT</h2>
+			<h3> Voici trois exemples de projets graphiques que j'ai mené lors de mon expérience. J'ai repensé les cartes de la brasserie et du bar suite à l'arrivée du nouveau Chef Alexandre Auger. A l'occasion de la création d'un Gin exclusif en collaboration avec l'alcoolier marseillais Ferroni, j'ai participé à l'élaboration de l'étiquette aposée sur les bouteilles. 
+		</h3>
+	</div>
+
+	<div class="cards">
+		<div class="card">
+			<img src="images/CARTE1.png" alt="MENU LE CARRE">
+		</div>
+		<div class="card">
+			<img src="images/CARTE2.png" alt="MENU LE DANTES">
+		</div>
+		<div class="card">
+			<img src="images/FERRONI.jpg" alt="ETIQUETTE GIN DE POLLEN">
+		</div>
+	</div>
+</div>
+
+<div class="container">
 		<h2>PERNOD RICARD</h2>
+		<h3> A l'occasion de l'anniversaire de Pernod Ricard, le MX Marseille a fait appel à mon association Mars'eyes Communication pour couvrir un vernissage, j'ai donc pu effectuer cette prestation.
+		</h3>
 	</div>
 
 	<div class="cards">
@@ -88,6 +210,92 @@
 		</div>
 	</div>
 
+	<div class="container">
+		<h2>WEI PGE 2022 - KEDGE BS</h2>
+		<h3> Dans le cadre de mon association Mars'eyes Communication j'ai couvert le Week-End d'intégration 2022.
+		</h3>
+	</div>
+
+	<div class="cards">
+		<div class="card">
+			<img src="images/vlad1.JPG" alt="Vladimir Cauchemar">
+		</div>
+		<div class="card">
+			<img src="images/vlad2.jpg" alt="Vladimir Cauchemar">
+		</div>
+		<div class="card">
+			<img src="images/zola.jpg" alt="Zola">
+		</div>
+	</div>
+
+	<div class="cards">
+		<div class="card">
+			<img src="images/wei2.jpg" alt="WEI">
+		</div>
+		<div class="card">
+			<img src="images/wei1.jpg" alt="WEI">
+		</div>
+			<div class="card">
+			<img src="images/wei3.jpg" alt="WEI">
+		</div>
+	</div>
+<div class="container">
+		<h2>CHALLENGE ECRICOME 2024</h2>
+	</div>
+
+<div class="cards">
+		<div class="card">
+			<img src="images/CHALLENGE241.jpg" alt="CHALLENGE">
+		</div>
+		<div class="card">
+			<img src="images/CHALLENGE242.jpg" alt="CHALLENGE">
+		</div>
+		<div class="card">
+			<img src="images/CHALLENGE243.jpg" alt="CHALLENGE">
+		</div>
+		<div class="card">
+			<img src="images/CHALLENGE244.jpg" alt="CHALLENGE">
+		</div>
+		<div class="card">
+			<img src="images/CHALLENGE245.jpg" alt="CHALLENGE">
+		</div>
+		<div class="card">
+			<img src="images/CHALLENGE246.jpg" alt="CHALLENGE">
+		</div>
+		<div class="card">
+			<img src="images/CHALLENGE247.jpg" alt="CHALLENGE">
+		</div>
+		<div class="card">
+			<img src="images/CHALLENGE248.jpg" alt="CHALLENGE">
+		</div>
+</div>
+
+<div class="container">
+		<h2>CHALLENGE ECRICOME 2023</h2>
+	</div>
+
+	<div class="cards">
+		<div class="card">
+			<img src="images/CHALLENGE231.jpg" alt="CHALLENGE">
+		</div>
+		<div class="card">
+			<img src="images/CHALLENGE232.jpg" alt="CHALLENGE">
+		</div>
+		<div class="card">
+			<img src="images/CHALLENGE233.jpg" alt="CHALLENGE">
+		</div>
+		<div class="card">
+			<img src="images/CHALLENGE235.jpg" alt="CHALLENGE">
+		</div>
+		<div class="card">
+			<img src="images/CHALLENGE236.jpg" alt="CHALLENGE">
+		</div>
+		<div class="card">
+			<img src="images/CHALLENGE237.jpg" alt="CHALLENGE">
+		</div>
+	</div>
+</div>
+
 <div class="container">
 		<h2>CHALLENGE ECRICOME 2022</h2>
 	</div>
@@ -103,7 +311,7 @@
 			<img src="images/challenge3.jpg" alt="CHALLENGE">
 		</div>
 	</div>
-
+</div>
 
 <div class="container">
 		<h2>PORTRAITS</h2>
@@ -123,7 +331,7 @@
 </div>
 
 <div class="container">
-		<h2>VISUELS</h2>
+		<h2>VISUELS - ADMISSIBLES - KEDGE BUSINESS SCHOOL</h2>
 </div>
 
 	<div class="cards">
@@ -169,14 +377,19 @@
 		<div class="card">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/7s_-lEUjYHc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
+<div class="instagram-reels">
+  <iframe src="https://www.instagram.com/reel/Cq-xJkVuxLy/embed?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" width="320" height="400" frameborder="0" scrolling="no" allowtransparency="true" style="display: inline-block; margin: 10px;"></iframe>
+  <iframe src="https://www.instagram.com/reel/Cw2zsX9L-ym/embed" width="320" height="400" frameborder="0" scrolling="no" allowtransparency="true" style="display: inline-block; margin: 10px;"></iframe>
+  <iframe src="https://www.instagram.com/reel/Csnnw-Ruf7w/embed?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" width="320" height="400" frameborder="0" scrolling="no" allowtransparency="true" style="display: inline-block; margin: 10px;"></iframe>
+  <iframe src="https://www.instagram.com/reel/Ctjn2bNrE2Q/embed?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" width="320" height="400" frameborder="0" scrolling="no" allowtransparency="true" style="display: inline-block; margin: 10px;"></iframe>
+</div>
 	</div>
 
 <div class="footer">
 	  <div class="footer-contact">
 	    <h2>Contact</h2>
 	    <p>Maureen Perier</p>
-	    <p>70 Rue Breteuil</p>
-	    <p>13006 Marseille, France</p>
+	    <p>+33 6 03 95 60 84</p>
 	  	<a href="mailto:maureen.perier@kedgebs.com?subject=Prise de contact">maureen.perier@kedgebs.com</a>
 	  </div>
 	<div class="container">
@@ -185,16 +398,6 @@
 	<div class="footer-reseaux">
 	  <h2>Réseaux sociaux</h2>
 		<ul id="liste-reseaux-sociaux">
-	 		<li>
-	    	<a href="https://www.instagram.com/neeruamp/">
-	  			<i class="fab fa-instagram"> Instagram</i>
-	    	</a>
-	    </li>
-	    <li>
-	      <a href="https://www.facebook.com/neeruamp/" target="blank">
-	    	  <i class="fab fa-facebook-square"> Facebook</i>
-	     </a>
-	    </li>
 	    <li>
 	      <a href="https://www.linkedin.com/in/maureen-perier-889969226/" target="blank">
 	        <i class="fa-brands fa-linkedin-in"> LinkedIn</i>
